# gridsolve

./: .gitignore  Cargo.toml  Makefile  README.adoc  build_wasm.sh  index.html  rustfmt.toml
.github/workflows/: deploy.yml
crates/gridsolve/: Cargo.toml
crates/gridsolve/src/: constraint.rs  lib.rs  puzzle.rs  rule.rs  solver.rs
crates/gridsolve_cli/: Cargo.toml
crates/gridsolve_cli/src/: main.rs
crates/gridsolve_wasm/: Cargo.toml
crates/gridsolve_wasm/src/: lib.rs
puzzles/: README.adoc  simple.txt
src/: constraint.rs  lib.rs  main.rs  puzzle.rs  rule.rs  solver.rs
tests/: test_solver.rs
www/: ClueInput.jsx  ClueKinds.jsx  Puzzle.jsx  PuzzleInput.jsx  Solution.jsx  app.css  app.jsx  index.html  package.json
