[package]
name = "gridsolve"
version = "0.1.0"
authors = ["Aakash Patel <aakpat6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.5.3"
itertools =  "0.9.0"
prettytable-rs = "0.8.0"
structopt = "0.3.20"
snafu = "0.6.9"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
log = "0.4.11"
log4rs = "0.13.0"

[profile.release]
opt-level = 3
lto = true
debug = false
