[package]
name = "gridsolve"
version = "0.1.0"
authors = ["Aakash Patel <github@avp42.com>"]
license = "MIT"
repository = "https://github.com/avp/gridsolve"
edition = "2018"

[dependencies]
bimap = "0.5.3"
itertools =  "0.9.0"
anyhow = "1.0.58"
thiserror = "1.0.31"
serde = {version = "1.0.117", features = ["derive"]}
