[package]
name = "gridsolve_cli"
version = "0.1.0"
authors = ["Aakash Patel <aakpat6@gmail.com>"]
license = "MIT"
repository = "https://github.com/avp/gridsolve"
edition = "2018"

[dependencies]
gridsolve = { path = "../gridsolve" }
bimap = "0.5.3"
itertools =  "0.9.0"
prettytable-rs = "0.10.0"
structopt = "0.3.20"
anyhow = "1.0.58"
thiserror = "1.0.31"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
wasm-bindgen = "0.2"
