[package]
name = "gridsolve_wasm"
version = "0.1.0"
authors = ["Aakash Patel <aakpat6@gmail.com>"]
license = "MIT"
repository = "https://github.com/avp/gridsolve"
edition = "2018"

[dependencies]
gridsolve = { path = "../gridsolve" }
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}

[lib]
crate-type = ["cdylib"]
